--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 </div>
 
 <div id="baixo">
-    <button id="menu" style="margin-left: 23%;"><b><a id="txt" href="https://raul-44.github.io/restaurante_busca/">INÍCIO</a></b></button>
+    <button id="menu" style="margin-left: 23%;"><b><a id="txt" href="https://raul-44.github.io/restaurante_inicio/">INÍCIO</a></b></button>
     <button id="menu"><b><a id="txt" href="https://raul-44.github.io/restaurante_busca/">BUSCA</a></b></button>
-    <button id="menu"><b><a id="txt" href="">CONTATO</a></b></button>
+    <button id="menu"><b><a id="txt" href="https://raul-44.github.io/restaurante_contato/">CONTATO</a></b></button>
     <button id="menu"><b><a id="txt" href="https://raul-44.github.io/restaurante_login/">CADASTRO</a></b></button>
-    <button id="menu" style="margin-right: 1%;"><b><a id="txt" href="">PEDIDOS</a></b></button> 
+    <button id="menu" style="margin-right: 1%;"><b><a id="txt" href="https://raul-44.github.io/restaurante_pedidos/">PEDIDOS</a></b></button> 
 </div>  
     
 </body>
